Moss Changelog

!	Security fix and important improve;
*	Common bug fix and improve;
+	Feature add;
-	Feature remove;


2.0.1
=====
2016-MM-DD
+ Add YUM Priorities plugin. CentOS-Base set to 1, CentOS-Plus set to 2
  and EPEL set to 3;
+ Add dmidecode RPM;
* Set default LANG and LC_ALL to en_US.UTF-8;
* Fix Vim statusline;
* vimrc optimized;
* Arrange RPMs in install_rpm.sh;
* Update SaltStack installation. Use SaltStack official YUM repository;
* Update Xtrabackup script. No database lock during backup and record
  backup log;
* Enable MySQL GTID by default;
* Redis THP setting support;
* Optimize sysctl.conf;
* Update Nginx SSL configuration;
* Fix redis init script stop fail when requirepass used;
* Redis bind to 127.0.0.1 by default;
* redis.conf and redis init script set to 0600 and 0700;
- Remove htop RPM;


2.0.0
=====
2015-09-19
! Support uninstall Moss. Select 'u' in installaion interface;
! Use CentOS original libs.(libxml2,zlib,openssl,pcre,libmcrypt etc.);
+ Add Name Service Caching Daemon (NSCD);
+ Support log user shell commands in syslog (/var/log/secure);
+ Prompt user reboot system if needed;
+ Set GRUB to visable boot mode;
+ Add /etc/resolv.conf optimize;
+ Add package_info.sh tool;
* Optimize L.N.M.P and library packages install policy;
* Speed up service software packages installation;
* Optimize system service on/off policy;
* Enhance Bash command alias;
* Enhance vimrc profile;
* Refine every steps of system config;
* Installation will be abort if YUM install/update failed;
* Update php.ini for PHP 5.6;
* Optimize MySQL my.cnf;
* Fix YUM repository config file;
* Fix installation TUI bug;
* Fix Redis anonymous access. Add Redis password;
* Fix SSH user login and public key jugement policy;
* Fix Nginx Vim syntax file for Vim 7.x;
* Fix MySQL database can not backup with Percona Xtrabackup;
- Remove XCache. Use PHP 5.6 build-in Zend OPcache instead;
- Remove Squid,Varnish,KeepAlived,PECL XHProf and memcached;